src/test/deca/context/valid/SansObjet/DeclVar-Mult-float-float-int.deca
// Description:
//    Declaration of a float variable using * operation between a float variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    int y = 3; 
    float z = x * y ; 
}
